--- a/index.html
+++ b/index.html
@@ -185,69 +185,91 @@
   <!-- MAIN AREA -->
   <main id="mainContent" class="site-main min-h-[400px] bg-white">
     <!-- Cards Horizontais dos Artigos -->
-    <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
-      <!-- Card mais recente: Lua -->
-      <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-        <div class="md:w-1/2 flex-shrink-0">
-          <div class="w-full aspect-w-16 aspect-h-9">
-            <img
-              src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
-              alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
-              class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-              loading="lazy"
-            />
-          </div>
-        </div>
-        <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-          <div>
-            <h2 class="text-2xl font-bold text-[#071834] mb-4">
-              Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
-            </h2>
-            <p class="text-gray-700 mb-6">
-              Fragmentos da missão Chang’e-6 indicam que o interior do lado oculto da Lua esfriou mais rápido, 
-              revelando assimetrias térmicas profundas na formação do satélite.
-            </p>
-          </div>
-          <div>
-            <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" 
-              class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
-              Leia mais
-            </a>
-          </div>
-        </div>
-      </div>
+    
+            <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
 
-      <!-- Card anterior: fóton -->
-      <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-        <div class="md:w-1/2 flex-shrink-0">
-          <div class="w-full aspect-w-16 aspect-h-9">
-            <img
-              src="https://i.postimg.cc/521Qj1s9/images.jpg"
-              alt="Representação artística de fóton interagindo com nuvem atômica"
-              class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-              loading="lazy"
-            />
-          </div>
-        </div>
-        <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-          <div>
-            <h2 class="text-2xl font-bold text-[#071834] mb-4">
-              Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
-            </h2>
-            <p class="text-gray-700 mb-6">
-              Descubra o estudo que investiga quanto tempo um fóton permanece como excitação atômica em nuvens de átomos, com resultados surpreendentes da óptica quântica.
-            </p>
-          </div>
-          <div>
-            <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
-              class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
-              Leia mais
-            </a>
-          </div>
-        </div>
+  <!-- Novo Card: Energia Escura -->
+  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+    <div class="md:w-1/2 flex-shrink-0">
+      <div class="w-full aspect-w-16 aspect-h-9">
+        <img
+          src="https://scx1.b-cdn.net/csz/news/800a/2025/could-dark-energy-chan.jpg"
+          alt="Energia Escura: Simulações desafiam modelo cosmológico padrão"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
       </div>
+    </div>
+    <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+      <div>
+        <h2 class="text-2xl font-bold text-[#071834] mb-4">
+          Energia Escura: Simulações Desafiam Modelo Cosmológico Padrão
+        </h2>
+      </div>
+      <div>
+        <a href="https://portalciencianews.com.br/post/outubro/energia-escura-simulacoes.html" 
+          class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+          Leia mais
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card mais recente: Lua -->
+  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+    <div class="md:w-1/2 flex-shrink-0">
+      <div class="w-full aspect-w-16 aspect-h-9">
+        <img
+          src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
+          alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
+      </div>
+    </div>
+    <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+      <div>
+        <h2 class="text-2xl font-bold text-[#071834] mb-4">
+          Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
+        </h2>
+      </div>
+      <div>
+        <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" 
+          class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+          Leia mais
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card anterior: fóton -->
+  <div class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+    <div class="md:w-1/2 flex-shrink-0">
+      <div class="w-full aspect-w-16 aspect-h-9">
+        <img
+          src="https://i.postimg.cc/521Qj1s9/images.jpg"
+          alt="Representação artística de fóton interagindo com nuvem atômica"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
+      </div>
+    </div>
+    <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+      <div>
+        <h2 class="text-2xl font-bold text-[#071834] mb-4">
+          Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
+        </h2>
+      </div>
+      <div>
+        <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
+          class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition-colors duration-300">
+          Leia mais
+        </a>
+      </div>
+    </div>
+  </div>
+
     </section>
-
     <!-- Seção de Vídeos Recentes -->
     <section id="videos-e-destaque" class="py-16 bg-gray-50">
       <div class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0">
