--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link rel="alternate" type="application/rss+xml" title="Ciência News - RSS" href="/feed.xml" />
 </head>
 <body class="antialiased text-gray-900 bg-white">
 
