--- a/index.html
+++ b/index.html
@@ -272,49 +272,50 @@
 
     </section>
     <!-- Seção de Vídeos Recentes -->
-    <section id="videos-e-destaque" class="py-16 bg-gray-50">
-      <div class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0">
-        <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
-        <div class="grid md:grid-cols-3 gap-8">
-          <!-- CARD 1 -->
-          <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-            <div class="w-full h-48 md:h-56 pointer-events-none">
-              <iframe class="w-full h-full" src="https://www.youtube.com/embed/no6tjPg0PtM" title="Círculos Misteriosos no Universo" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="p-4">
-              <h3 class="text-xl font-semibold text-gray-800 mb-2">CÍRCULOS MISTERIOSOS NO UNIVERSO PODEM SER EXPLOSÕES DE BURACOS NEGROS!</h3>
-              <a href="https://youtu.be/no6tjPg0PtM" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
-                <i class="bi bi-youtube mr-2"></i> Assista no YouTube
-              </a>
-            </div>
-          </div>
-          <!-- CARD 2 -->
-          <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-            <div class="w-full h-48 md:h-56 pointer-events-none">
-              <iframe class="w-full h-full" src="https://www.youtube.com/embed/dlGDojJp2uQ" title="Vida em Marte" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="p-4">
-              <h3 class="text-xl font-semibold text-gray-800 mb-2">NASA PODE TER DESTRUÍDO ACIDENTALMENTE O PRIMEIRO SINAL DE VIDA EM MARTE - HÁ 50 ANOS!</h3>
-              <a href="https://youtu.be/dlGDojJp2uQ?si=i8Nekc-kilY4iUka" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
-                <i class="bi bi-youtube mr-2"></i> Assista no YouTube
-              </a>
-            </div>
-          </div>
-          <!-- CARD 3 -->
-          <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
-            <div class="w-full h-48 md:h-56 pointer-events-none">
-              <iframe class="w-full h-full" src="https://www.youtube.com/embed/ken15l6Wmsc" title="Partículas como ondas" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="p-4">
-              <h3 class="text-xl font-semibold text-gray-800 mb-2">PARTÍCULAS DO TAMANHO DE VÍRUS SE COMPORTAM COMO ONDAS - PELA PRIMEIRA VEZ!</h3>
-              <a href="https://youtu.be/ken15l6Wmsc?si=vcYhGxfpCnjnx-iO" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
-                <i class="bi bi-youtube mr-2"></i> Assista no YouTube
-              </a>
-            </div>
-          </div>
+   <section id="videos-e-destaque" class="py-16 bg-gray-50">
+  <div class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0">
+    <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
+    <div class="grid md:grid-cols-3 gap-8">
+      <!-- CARD 1 -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <div class="w-full h-48 md:h-56 pointer-events-none">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/EOWMCgjsjtE" title="Estudo propõe que a matéria escura e a energia escura são uma ilusão" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">ESTUDO PROPÕE QUE A MATÉRIA ESCURA E A ENERGIA ESCURA SÃO UMA ILUSÃO</h3>
+          <a href="https://www.youtube.com/watch?v=EOWMCgjsjtE" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
+            <i class="bi bi-youtube mr-2"></i> Assista no YouTube
+          </a>
         </div>
       </div>
-    </section>
+      <!-- CARD 2 -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <div class="w-full h-48 md:h-56 pointer-events-none">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/5cMw8TdVv9w" title="Um termômetro para medir a quanticidade" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">UM TERMÔMETRO PARA MEDIR A QUANTICIDADE!</h3>
+          <a href="https://youtu.be/5cMw8TdVv9w" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
+            <i class="bi bi-youtube mr-2"></i> Assista no YouTube
+          </a>
+        </div>
+      </div>
+      <!-- CARD 3 -->
+      <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
+        <div class="w-full h-48 md:h-56 pointer-events-none">
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/hRzQcjVm2pw?si=0ukIDOMRRhksibcL" title="Detectados sinais que podem vir de outro universo" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="p-4">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">DETECTADOS SINAIS QUE PODEM VIR DE OUTRO UNIVERSO!</h3>
+          <a href="https://youtu.be/hRzQcjVm2pw?si=0ukIDOMRRhksibcL" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
+            <i class="bi bi-youtube mr-2"></i> Assista no YouTube
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
     <!-- Vídeos mais vistos -->
     <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10">
