--- a/index.html
+++ b/index.html
@@ -271,19 +271,22 @@
   </div>
 
     </section>
-    <!-- Seção de Vídeos Recentes -->
-   <section id="videos-e-destaque" class="py-16 bg-gray-50">
+   
+
+ <!-- Seção de Vídeos Recentes -->
+   
+<section id="videos-e-destaque" class="py-16 bg-gray-50">
   <div class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0">
     <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Vídeos Recentes</h2>
     <div class="grid md:grid-cols-3 gap-8">
       <!-- CARD 1 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
         <div class="w-full h-48 md:h-56 pointer-events-none">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/EOWMCgjsjtE" title="Estudo propõe que a matéria escura e a energia escura são uma ilusão" frameborder="0" allowfullscreen></iframe>
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/0GZvOz7s9UY" title="DESCOBERTA A ESTRELA MAIS PURA DO UNIVERSO CONHECIDO" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="p-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">ESTUDO PROPÕE QUE A MATÉRIA ESCURA E A ENERGIA ESCURA SÃO UMA ILUSÃO</h3>
-          <a href="https://www.youtube.com/watch?v=EOWMCgjsjtE" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">DESCOBERTA A ESTRELA MAIS PURA DO UNIVERSO CONHECIDO</h3>
+          <a href="https://youtu.be/0GZvOz7s9UY" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
             <i class="bi bi-youtube mr-2"></i> Assista no YouTube
           </a>
         </div>
@@ -291,11 +294,11 @@
       <!-- CARD 2 -->
       <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition-shadow duration-300">
         <div class="w-full h-48 md:h-56 pointer-events-none">
-          <iframe class="w-full h-full" src="https://www.youtube.com/embed/5cMw8TdVv9w" title="Um termômetro para medir a quanticidade" frameborder="0" allowfullscreen></iframe>
+          <iframe class="w-full h-full" src="https://www.youtube.com/embed/EOWMCgjsjtE" title="Estudo propõe que a matéria escura e a energia escura são uma ilusão" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="p-4">
-          <h3 class="text-xl font-semibold text-gray-800 mb-2">UM TERMÔMETRO PARA MEDIR A QUANTICIDADE!</h3>
-          <a href="https://youtu.be/5cMw8TdVv9w" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">ESTUDO PROPÕE QUE A MATÉRIA ESCURA E A ENERGIA ESCURA SÃO UMA ILUSÃO</h3>
+          <a href="https://www.youtube.com/watch?v=EOWMCgjsjtE" target="_blank" class="inline-flex items-center px-4 py-2 bg-red-600 text-white rounded hover:bg-red-700 transition-colors">
             <i class="bi bi-youtube mr-2"></i> Assista no YouTube
           </a>
         </div>
@@ -318,7 +321,8 @@
 
 
     <!-- Vídeos mais vistos -->
-    <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10">
+   
+ <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10">
       <div class="text-center mb-8 text-2xl font-semibold text-gray-800">
         Mais vistos do Ciência News no YouTube
       </div>
