--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -185,6 +186,35 @@
 
   <!-- MAIN AREA -->
   <main id="mainContent" class="site-main min-h-[400px] bg-white">
+
+
+<!-- ===== CARD ESPECIAL =====-->
+
+<div class="max-w-[1000px] mx-auto bg-blue-900 rounded-2xl shadow-lg flex flex-col md:flex-row items-center md:items-center gap-6 overflow-hidden">
+  
+  <!-- Vídeo incorporado (não clicável) -->
+  <div class="w-full md:w-1/2 aspect-video">
+    <iframe 
+      src="https://www.youtube.com/embed/lxPEhtTA3Mk?controls=0&disablekb=1&modestbranding=1&rel=0"
+      class="w-full h-full pointer-events-none rounded-lg"
+      allowfullscreen>
+    </iframe>
+  </div>
+
+  <!-- Conteúdo do card -->
+  <div class="w-full md:w-1/2 flex flex-col justify-center text-center md:text-left text-white p-6">
+    <h2 class="text-2xl md:text-3xl font-bold mb-4">
+      PODE SER O MENOR OBJETO DE MATÉRIA ESCURA DO UNIVERSO CONHECIDO
+    </h2>
+    <a href="https://www.youtube.com/watch?v=lxPEhtTA3Mk" 
+       target="_blank" 
+       class="self-center md:self-start bg-yellow-400 text-black font-semibold py-2 px-5 rounded-lg hover:bg-yellow-300 transition w-auto">
+      Veja o vídeo
+    </a>
+  </div>
+
+</div>
+
     <!-- Cards Horizontais dos Artigos -->
     
             <section class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
