--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
 <!-- ===== CARD ESPECIAL =====-->
 
-<div class="max-w-[1000px] mx-auto bg-blue-900 rounded-2xl shadow-lg flex flex-col md:flex-row items-center md:items-center gap-6 overflow-hidden">
+<div <div class="max-w-[1000px] mx-auto my-10 bg-blue-900 rounded-2xl shadow-lg flex flex-col md:flex-row items-center md:items-center gap-6 overflow-hidden">
   
   <!-- Vídeo incorporado (não clicável) -->
   <div class="w-full md:w-1/2 aspect-video">
