--- a/index.html
+++ b/index.html
@@ -190,37 +190,39 @@
 <!-- ============================================= -->
 <main id="mainContent" class="site-main min-h-[400px] bg-white">
 
-  <!-- ============================================= -->
-  <!-- 🔵 CARD ESPECIAL DE DESTAQUE -->
-  <!-- ============================================= -->
-  <section class="max-w-[1000px] mx-auto my-10 bg-blue-900 rounded-2xl shadow-lg flex flex-col md:flex-row items-center gap-6 overflow-hidden">
-    
-    <!-- Vídeo de destaque (não clicável) -->
-    <div class="w-full md:w-1/2 aspect-video">
-      <iframe 
-        src="https://www.youtube.com/embed/lxPEhtTA3Mk?controls=0&disablekb=1&modestbranding=1&rel=0"
-        class="w-full h-full pointer-events-none rounded-lg"
-        allowfullscreen
-        loading="lazy">
-      </iframe>
+<!-- CARD ESPECIAL -->
+<section class="my-10 px-4 sm:px-6 md:px-0">
+  <div class="bg-blue-900 rounded-2xl shadow-lg md:flex md:flex-row overflow-hidden max-w-[1000px] mx-auto">
+
+    <!-- Vídeo (16:9, ocupa toda a largura do card azul) -->
+    <div class="w-full md:w-1/2">
+      <div class="relative w-full" style="padding-top: 56.25%;">
+        <iframe
+          src="https://www.youtube.com/embed/lxPEhtTA3Mk?controls=0&disablekb=1&modestbranding=1&rel=0"
+          class="absolute top-0 left-0 w-full h-full pointer-events-none"
+          frameborder="0"
+          allowfullscreen
+          loading="lazy"></iframe>
+      </div>
     </div>
 
-    <!-- Conteúdo textual -->
-    <div class="w-full md:w-1/2 flex flex-col justify-center text-center md:text-left text-white p-6">
-      <h2 class="text-2xl md:text-3xl font-bold mb-4 leading-tight">
+    <!-- Conteúdo: texto + botão -->
+    <div class="w-full md:w-1/2 flex flex-col justify-center text-center md:text-left text-white p-4 md:p-8">
+      <h2 class="text-xl sm:text-2xl md:text-3xl font-bold mb-4 leading-tight">
         Pode ser o menor objeto de matéria escura do universo conhecido
       </h2>
-      <a href="https://www.youtube.com/watch?v=lxPEhtTA3Mk" 
-         target="_blank" 
+      <a href="https://www.youtube.com/watch?v=lxPEhtTA3Mk"
+         target="_blank"
          class="self-center md:self-start bg-yellow-400 text-black font-semibold py-2 px-5 rounded-lg hover:bg-yellow-300 transition duration-300">
-         Veja o vídeo
+        Veja o vídeo
       </a>
     </div>
 
-  </section>
+  </div>
+</section>
+  
 
-
-  <!-- ============================================= -->
+<!-- ============================================= -->
   <!-- 📰 SEÇÃO DE ARTIGOS -->
   <!-- ============================================= -->
   <section id="artigos" class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
