--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -189,107 +190,132 @@
 <!-- ============================================= -->
 <main id="mainContent" class="site-main min-h-[400px] bg-white">
 
-<!-- CARD ESPECIAL -->
+<!-- CARDS LADO A LADO / RESPONSIVO -->
 <section class="my-10 px-4 sm:px-6 md:px-0">
-  <div class="bg-blue-900 rounded-2xl shadow-lg md:flex md:flex-row overflow-hidden max-w-[1000px] mx-auto">
+  <div class="max-w-[1000px] mx-auto flex flex-col md:flex-row md:space-x-6 items-start">
 
-    <!-- Vídeo (16:9, ocupa toda a largura do card azul) -->
-    <div class="w-full md:w-1/2">
-      <div class="relative w-full" style="padding-top: 56.25%;">
+    <!-- CARD ANTIGO (horizontal, vídeo à esquerda, título e botão à direita) -->
+    <div class="flex-1 bg-blue-900 rounded-2xl shadow-lg overflow-hidden md:flex w-full mb-6 md:mb-0">
+      <!-- Vídeo -->
+      <div class="w-full md:w-1/2 h-64 md:h-auto relative">
         <iframe
           src="https://www.youtube.com/embed/lxPEhtTA3Mk?controls=0&disablekb=1&modestbranding=1&rel=0"
           class="absolute top-0 left-0 w-full h-full pointer-events-none"
           frameborder="0"
           allowfullscreen
-          loading="lazy"></iframe>
+          loading="lazy"
+          title="Vídeo: Pode ser o menor objeto de matéria escura">
+        </iframe>
+      </div>
+
+      <!-- Conteúdo -->
+      <div class="w-full md:w-1/2 flex flex-col justify-center text-center md:text-left text-white p-4 md:p-8">
+        <h2 class="text-xl sm:text-2xl md:text-3xl font-bold mb-4 leading-tight">
+          Pode ser o menor objeto de matéria escura do universo conhecido
+        </h2>
+        <a href="https://www.youtube.com/watch?v=lxPEhtTA3Mk"
+           target="_blank"
+           class="bg-yellow-400 text-black font-semibold py-2 px-5 rounded-lg hover:bg-yellow-300 transition duration-300">
+          Veja o vídeo
+        </a>
       </div>
     </div>
 
-    <!-- Conteúdo: texto + botão -->
-    <div class="w-full md:w-1/2 flex flex-col justify-center text-center md:text-left text-white p-4 md:p-8">
-      <h2 class="text-xl sm:text-2xl md:text-3xl font-bold mb-4 leading-tight">
-        Pode ser o menor objeto de matéria escura do universo conhecido
-      </h2>
-      <a href="https://www.youtube.com/watch?v=lxPEhtTA3Mk"
-         target="_blank"
-         class="self-center md:self-start bg-yellow-400 text-black font-semibold py-2 px-5 rounded-lg hover:bg-yellow-300 transition duration-300">
-        Veja o vídeo
-      </a>
-    </div>
+    <!-- SIDEBAR / NOVO CARD (vertical) -->
+    <aside class="w-full md:w-1/3 bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col">
+      <img
+        src="https://scx1.b-cdn.net/csz/news/800a/2025/event-horizon-telescop.jpg"
+        alt="Simulação do buraco negro M87* capturada pelo Telescópio do Horizonte de Eventos"
+        class="w-full h-48 object-cover">
+      <div class="p-5 flex flex-col flex-grow">
+        <h3 class="text-lg font-bold text-gray-900 mb-3 leading-snug">
+          Telescópio do Horizonte de Eventos revela novo método para detectar matéria escura
+        </h3>
+        <p class="text-gray-700 text-sm mb-4">
+          Pesquisadores utilizam imagens do EHT para identificar sinais sutis de matéria escura ao redor de buracos negros supermassivos.
+        </p>
+        <a href="https://portalciencianews.com.br/post/outubro/evento-horizon-materia-escura.html"
+           class="mt-auto inline-block text-center bg-blue-900 text-white font-semibold py-2 px-5 rounded-lg hover:bg-blue-800 transition duration-300">
+          Leia mais
+        </a>
+      </div>
+    </aside>
 
   </div>
 </section>
-  
 
 <!-- ============================================= -->
   <!-- 📰 SEÇÃO DE ARTIGOS -->
   <!-- ============================================= -->
-  <section id="artigos" class="max-w-[1100px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10">
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+  <section id="artigos" class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
 
     <!-- Card 1: Energia Escura -->
-    <article class="bg-white rounded-2xl shadow-md overflow-hidden flex flex-col transition-transform duration-300 hover:-translate-y-1">
-      <img
-        src="https://scx1.b-cdn.net/csz/news/800a/2025/could-dark-energy-chan.jpg"
-        alt="Energia Escura: Simulações desafiam modelo cosmológico padrão"
-        class="w-full h-48 object-cover transition-transform duration-500 hover:scale-105"
-        loading="lazy"
-      />
-      <div class="p-5 flex flex-col flex-1 justify-between text-center">
-        <h3 class="text-lg md:text-xl font-semibold text-[#071834] mb-4 leading-snug">
+    <article class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+      <div class="md:w-1/2">
+        <img
+          src="https://scx1.b-cdn.net/csz/news/800a/2025/could-dark-energy-chan.jpg"
+          alt="Energia Escura: Simulações desafiam modelo cosmológico padrão"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
+      </div>
+      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+        <h3 class="text-2xl font-bold text-[#071834] mb-4">
           Energia Escura: simulações desafiam modelo cosmológico padrão
         </h3>
         <a href="https://portalciencianews.com.br/post/outubro/energia-escura-simulacoes.html" 
            target="_blank"
-           class="mx-auto inline-block bg-[#071834] text-white font-medium px-5 py-2 rounded-md hover:bg-[#050f27] transition duration-300">
+           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition duration-300">
           Leia mais
         </a>
       </div>
     </article>
 
     <!-- Card 2: Lua -->
-    <article class="bg-white rounded-2xl shadow-md overflow-hidden flex flex-col transition-transform duration-300 hover:-translate-y-1">
-      <img
-        src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
-        alt="Comparação: lado visível e lado oculto da Lua"
-        class="w-full h-48 object-cover transition-transform duration-500 hover:scale-105"
-        loading="lazy"
-      />
-      <div class="p-5 flex flex-col flex-1 justify-between text-center">
-        <h3 class="text-lg md:text-xl font-semibold text-[#071834] mb-4 leading-snug">
+    <article class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+      <div class="md:w-1/2">
+        <img
+          src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
+          alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
+      </div>
+      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+        <h3 class="text-2xl font-bold text-[#071834] mb-4">
           Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
         </h3>
         <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" 
            target="_blank"
-           class="mx-auto inline-block bg-[#071834] text-white font-medium px-5 py-2 rounded-md hover:bg-[#050f27] transition duration-300">
+           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition duration-300">
           Leia mais
         </a>
       </div>
     </article>
 
     <!-- Card 3: Fóton -->
-    <article class="bg-white rounded-2xl shadow-md overflow-hidden flex flex-col transition-transform duration-300 hover:-translate-y-1">
-      <img
-        src="https://i.postimg.cc/521Qj1s9/images.jpg"
-        alt="Representação artística de fóton interagindo com nuvem atômica"
-        class="w-full h-48 object-cover transition-transform duration-500 hover:scale-105"
-        loading="lazy"
-      />
-      <div class="p-5 flex flex-col flex-1 justify-between text-center">
-        <h3 class="text-lg md:text-xl font-semibold text-[#071834] mb-4 leading-snug">
+    <article class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
+      <div class="md:w-1/2">
+        <img
+          src="https://i.postimg.cc/521Qj1s9/images.jpg"
+          alt="Representação artística de fóton interagindo com nuvem atômica"
+          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
+          loading="lazy"
+        />
+      </div>
+      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
+        <h3 class="text-2xl font-bold text-[#071834] mb-4">
           Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
         </h3>
         <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
            target="_blank"
-           class="mx-auto inline-block bg-[#071834] text-white font-medium px-5 py-2 rounded-md hover:bg-[#050f27] transition duration-300">
+           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition duration-300">
           Leia mais
         </a>
       </div>
     </article>
 
-  </div>
-</section>
-
+  </section>
 
 
   <!-- ============================================= -->
@@ -392,80 +418,77 @@
   <!-- ============================================= -->
   <!-- ✉️ FORMULÁRIO DE CONTATO -->
   <!-- ============================================= -->
- <section id="contato" class="py-12 bg-gray-50">
-  <div class="max-w-[600px] mx-auto bg-white p-6 rounded-2xl shadow-sm border border-gray-100">
-    <h2 class="text-2xl font-semibold text-center mb-6 text-gray-800 tracking-tight">
-      Entre em Contato
-    </h2>
-    
-    <form id="contactForm" class="space-y-3">
-      <div>
-        <label for="nome" class="block text-sm font-medium text-gray-700 mb-1">Nome</label>
-        <input id="nome" type="text" required class="w-full border border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded-md px-3 py-2 text-sm transition">
-      </div>
-      <div>
-        <label for="email" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-        <input id="email" type="email" required class="w-full border border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded-md px-3 py-2 text-sm transition">
-      </div>
-      <div>
-        <label for="assunto" class="block text-sm font-medium text-gray-700 mb-1">Assunto</label>
-        <input id="assunto" type="text" required class="w-full border border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded-md px-3 py-2 text-sm transition">
-      </div>
-      <div>
-        <label for="mensagem" class="block text-sm font-medium text-gray-700 mb-1">Mensagem</label>
-        <textarea id="mensagem" required class="w-full border border-gray-300 focus:border-blue-500 focus:ring-1 focus:ring-blue-500 rounded-md px-3 py-2 text-sm h-28 resize-none transition"></textarea>
-      </div>
-      <button type="submit" class="bg-blue-600 text-white text-sm font-medium px-4 py-2 rounded-md w-full hover:bg-blue-700 active:scale-[0.98] transition-transform">
-        Enviar
-      </button>
-    </form>
+  <section id="contato" class="py-16 bg-gray-100">
+    <div class="max-w-[1000px] mx-auto bg-white p-8 rounded-lg shadow-md">
+      <h2 class="text-3xl font-bold text-center mb-8">Entre em Contato</h2>
+      
+      <form id="contactForm" class="space-y-4">
+        <div>
+          <label for="nome" class="block font-medium mb-1">Nome</label>
+          <input id="nome" type="text" required class="w-full border rounded p-2">
+        </div>
+        <div>
+          <label for="email" class="block font-medium mb-1">Email</label>
+          <input id="email" type="email" required class="w-full border rounded p-2">
+        </div>
+        <div>
+          <label for="assunto" class="block font-medium mb-1">Assunto</label>
+          <input id="assunto" type="text" required class="w-full border rounded p-2">
+        </div>
+        <div>
+          <label for="mensagem" class="block font-medium mb-1">Mensagem</label>
+          <textarea id="mensagem" required class="w-full border rounded p-2 h-32 resize-none"></textarea>
+        </div>
+        <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded w-full hover:bg-blue-700 transition">
+          Enviar
+        </button>
+      </form>
 
-    <p id="status" class="mt-3 text-xs text-center"></p>
-  </div>
+      <p id="status" class="mt-4 text-sm text-center"></p>
+    </div>
 
-  <!-- Firebase Script -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
+    <!-- Firebase Script -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+      import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCXvccq220EDORjeLig90Iwna27HrRMJS8",
-      authDomain: "formulario-de-contato-6c213.firebaseapp.com",
-      projectId: "formulario-de-contato-6c213",
-      storageBucket: "formulario-de-contato-6c213.firebasestorage.app",
-      messagingSenderId: "916368258641",
-      appId: "1:916368258641:web:ab564fab4bc0e0f3a72a70",
-      measurementId: "G-24DRC401DW"
-    };
+      const firebaseConfig = {
+        apiKey: "AIzaSyCXvccq220EDORjeLig90Iwna27HrRMJS8",
+        authDomain: "formulario-de-contato-6c213.firebaseapp.com",
+        projectId: "formulario-de-contato-6c213",
+        storageBucket: "formulario-de-contato-6c213.firebasestorage.app",
+        messagingSenderId: "916368258641",
+        appId: "1:916368258641:web:ab564fab4bc0e0f3a72a70",
+        measurementId: "G-24DRC401DW"
+      };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const form = document.getElementById('contactForm');
-    const status = document.getElementById('status');
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
+      const form = document.getElementById('contactForm');
+      const status = document.getElementById('status');
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const nome = form.nome.value;
-      const email = form.email.value;
-      const assunto = form.assunto.value;
-      const mensagem = form.mensagem.value;
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const nome = form.nome.value;
+        const email = form.email.value;
+        const assunto = form.assunto.value;
+        const mensagem = form.mensagem.value;
 
-      try {
-        await addDoc(collection(db, "contact_submissions"), {
-          nome, email, assunto, mensagem, timestamp: new Date()
-        });
-        status.textContent = "✅ Mensagem enviada com sucesso!";
-        status.className = "mt-3 text-green-600 text-xs text-center";
-        form.reset();
-      } catch (error) {
-        console.error("Erro ao enviar:", error);
-        status.textContent = "❌ Erro ao enviar. Tente novamente.";
-        status.className = "mt-3 text-red-500 text-xs text-center";
-      }
-    });
-  </script>
-</section>
-
+        try {
+          await addDoc(collection(db, "contact_submissions"), {
+            nome, email, assunto, mensagem, timestamp: new Date()
+          });
+          status.textContent = "✅ Mensagem enviada com sucesso!";
+          status.className = "mt-4 text-green-600 text-sm text-center";
+          form.reset();
+        } catch (error) {
+          console.error("Erro ao enviar:", error);
+          status.textContent = "❌ Erro ao enviar. Tente novamente.";
+          status.className = "mt-4 text-red-500 text-sm text-center";
+        }
+      });
+    </script>
+  </section>
 
 </main>
 
