--- a/index.html
+++ b/index.html
@@ -244,78 +244,62 @@
   </div>
 </section>
 
-<!-- ============================================= -->
-  <!-- 📰 SEÇÃO DE ARTIGOS -->
-  <!-- ============================================= -->
-  <section id="artigos" class="max-w-[1000px] mx-auto px-4 sm:px-6 md:px-8 lg:px-0 my-10 space-y-10">
+<!-- ============================= -->
+  <!-- 📰 ARTIGOS EM DESTAQUE -->
+  <!-- ============================= -->
+  <section id="artigos" class="max-w-[1100px] mx-auto px-4 my-16">
+    <h2 class="text-3xl font-bold text-center mb-10 text-[#071834]">Últimos Artigos</h2>
 
-    <!-- Card 1: Energia Escura -->
-    <article class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-      <div class="md:w-1/2">
-        <img
-          src="https://scx1.b-cdn.net/csz/news/800a/2025/could-dark-energy-chan.jpg"
-          alt="Energia Escura: Simulações desafiam modelo cosmológico padrão"
-          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-          loading="lazy"
-        />
-      </div>
-      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-        <h3 class="text-2xl font-bold text-[#071834] mb-4">
-          Energia Escura: simulações desafiam modelo cosmológico padrão
-        </h3>
-        <a href="https://portalciencianews.com.br/post/outubro/energia-escura-simulacoes.html" 
-           target="_blank"
-           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition duration-300">
-          Leia mais
-        </a>
-      </div>
-    </article>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- Modelo de Card -->
+      <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
+        <img src="https://scx1.b-cdn.net/csz/news/800a/2025/could-dark-energy-chan.jpg"
+             alt="Energia Escura: simulações desafiam modelo cosmológico padrão"
+             class="w-full h-48 object-cover hover:scale-105 transition-transform"
+             loading="lazy">
+        <div class="p-5 text-center flex flex-col justify-between flex-1">
+          <h3 class="text-lg font-semibold text-[#071834] mb-4">Energia Escura: simulações desafiam modelo cosmológico padrão</h3>
+          <a href="https://portalciencianews.com.br/post/outubro/energia-escura-simulacoes.html"
+             target="_blank"
+             class="inline-block bg-[#071834] text-white px-5 py-2 rounded-md hover:bg-[#050f27] transition">
+             Leia mais
+          </a>
+        </div>
+      </article>
 
-    <!-- Card 2: Lua -->
-    <article class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-      <div class="md:w-1/2">
-        <img
-          src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
-          alt="Comparação: lado visível e lado oculto da Lua (imagem Clementine / NASA)"
-          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-          loading="lazy"
-        />
-      </div>
-      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-        <h3 class="text-2xl font-bold text-[#071834] mb-4">
-          Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio
-        </h3>
-        <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html" 
-           target="_blank"
-           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition duration-300">
-          Leia mais
-        </a>
-      </div>
-    </article>
+      <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
+        <img src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
+             alt="Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio"
+             class="w-full h-48 object-cover hover:scale-105 transition-transform"
+             loading="lazy">
+        <div class="p-5 text-center flex flex-col justify-between flex-1">
+          <h3 class="text-lg font-semibold text-[#071834] mb-4">Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio</h3>
+          <a href="https://portalciencianews.com.br/lua-lado-oculto-mais-frio.html"
+             target="_blank"
+             class="inline-block bg-[#071834] text-white px-5 py-2 rounded-md hover:bg-[#050f27] transition">
+             Leia mais
+          </a>
+        </div>
+      </article>
 
-    <!-- Card 3: Fóton -->
-    <article class="bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col md:flex-row">
-      <div class="md:w-1/2">
-        <img
-          src="https://i.postimg.cc/521Qj1s9/images.jpg"
-          alt="Representação artística de fóton interagindo com nuvem atômica"
-          class="w-full h-full object-cover transition-transform duration-500 hover:scale-105"
-          loading="lazy"
-        />
-      </div>
-      <div class="md:w-1/2 p-6 md:p-8 flex flex-col justify-between">
-        <h3 class="text-2xl font-bold text-[#071834] mb-4">
-          Quanto tempo um fóton permanece como excitação atômica? O enigma do tempo quântico
-        </h3>
-        <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html" 
-           target="_blank"
-           class="inline-block bg-[#071834] text-white font-semibold px-6 py-3 rounded-lg hover:bg-[#050f27] transition duration-300">
-          Leia mais
-        </a>
-      </div>
-    </article>
-
+      <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
+        <img src="https://i.postimg.cc/521Qj1s9/images.jpg"
+             alt="Quanto tempo um fóton permanece como excitação atômica?"
+             class="w-full h-48 object-cover hover:scale-105 transition-transform"
+             loading="lazy">
+        <div class="p-5 text-center flex flex-col justify-between flex-1">
+          <h3 class="text-lg font-semibold text-[#071834] mb-4">Quanto tempo um fóton permanece como excitação atômica?</h3>
+          <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html"
+             target="_blank"
+             class="inline-block bg-[#071834] text-white px-5 py-2 rounded-md hover:bg-[#050f27] transition">
+             Leia mais
+          </a>
+        </div>
+      </article>
+    </div>
   </section>
+
+
 
 
   <!-- ============================================= -->
