--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -251,7 +249,24 @@
     <h2 class="text-3xl font-bold text-center mb-10 text-[#071834]">Últimos Artigos</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-      <!-- Modelo de Card -->
+
+      <!-- CARD 1: Mini Buracos Negros -->
+      <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
+        <img src="https://cdn.pixabay.com/photo/2021/08/10/05/49/black-hole-6535072_1280.jpg"
+             alt="Ilustração de um análogo de buraco negro em laboratório"
+             class="w-full h-48 object-cover hover:scale-105 transition-transform"
+             loading="lazy">
+        <div class="p-5 text-center flex flex-col justify-between flex-1">
+          <h3 class="text-lg font-semibold text-[#071834] mb-4">Mini Buracos Negros em Laboratório: Ciência Real ou Mito?</h3>
+          <a href="https://portalciencianews.com.br/post/outubro/mini-buracos-negros-laboratorio.html"
+             target="_blank"
+             class="inline-block bg-[#071834] text-white px-5 py-2 rounded-md hover:bg-[#050f27] transition">
+             Leia mais
+          </a>
+        </div>
+      </article>
+
+      <!-- CARD 2: Energia Escura -->
       <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
         <img src="https://scx1.b-cdn.net/csz/news/800a/2025/could-dark-energy-chan.jpg"
              alt="Energia Escura: simulações desafiam modelo cosmológico padrão"
@@ -267,6 +282,7 @@
         </div>
       </article>
 
+      <!-- CARD 3: Lua de duas faces -->
       <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
         <img src="https://scx1.b-cdn.net/csz/news/800a/2025/far-side-of-the-moon-m.jpg"
              alt="Lua de duas faces: novas amostras sugerem que o lado oculto foi mais frio"
@@ -282,24 +298,8 @@
         </div>
       </article>
 
-      <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
-        <img src="https://i.postimg.cc/521Qj1s9/images.jpg"
-             alt="Quanto tempo um fóton permanece como excitação atômica?"
-             class="w-full h-48 object-cover hover:scale-105 transition-transform"
-             loading="lazy">
-        <div class="p-5 text-center flex flex-col justify-between flex-1">
-          <h3 class="text-lg font-semibold text-[#071834] mb-4">Quanto tempo um fóton permanece como excitação atômica?</h3>
-          <a href="https://portalciencianews.com.br/quanto-tempo-foton-excitacao-atomica.html"
-             target="_blank"
-             class="inline-block bg-[#071834] text-white px-5 py-2 rounded-md hover:bg-[#050f27] transition">
-             Leia mais
-          </a>
-        </div>
-      </article>
     </div>
   </section>
-
-
 
 
   <!-- ============================================= -->
