--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-BR">
 <head>
@@ -240,6 +239,73 @@
       </div>
     </aside>
 
+  </div>
+</section>
+
+<!-- VÍDEOS ATUAIS -->
+
+<section class="bg-white py-12 px-6 flex flex-wrap justify-center gap-6">
+  <!-- Card 1 -->
+  <div class="bg-red-600 rounded-2xl shadow-lg w-full sm:w-[48%] md:w-[30%] flex flex-col items-center text-center overflow-hidden">
+    <!-- Vídeo -->
+    <div class="relative w-full pb-[56.25%]">
+      <iframe
+        class="absolute top-0 left-0 w-full h-full rounded-t-2xl pointer-events-none"
+        src="https://www.youtube.com/embed/K_RI7v5qCNQ?controls=0"
+        title="Vídeo 1"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <!-- Título -->
+    <h2 class="text-white text-lg sm:text-xl font-bold mt-4 px-4">
+      A MECÂNICA QUÂNTICA ACABA DE SUPERAR A SEGUNDA LEI DA TERMODINÂMICA
+    </h2>
+    <!-- Botão -->
+    <a href="https://youtu.be/K_RI7v5qCNQ"
+       target="_blank"
+       class="mt-4 mb-4 bg-white text-red-600 font-semibold py-2 px-6 rounded-full hover:bg-red-100 transition">
+       Assistir no YouTube
+    </a>
+  </div>
+
+  <!-- Card 2 -->
+  <div class="bg-red-600 rounded-2xl shadow-lg w-full sm:w-[48%] md:w-[30%] flex flex-col items-center text-center overflow-hidden">
+    <div class="relative w-full pb-[56.25%]">
+      <iframe
+        class="absolute top-0 left-0 w-full h-full rounded-t-2xl pointer-events-none"
+        src="https://www.youtube.com/embed/XfCOgFORy_I?controls=0"
+        title="Vídeo 2"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <h2 class="text-white text-lg sm:text-xl font-bold mt-4 px-4">
+      PELA PRIMEIRA VEZ, ENCONTRADOS RESTOS DO PLANETA QUE DEU ORIGEM À TERRA
+    </h2>
+    <a href="https://youtu.be/XfCOgFORy_I"
+       target="_blank"
+       class="mt-4 mb-4 bg-white text-red-600 font-semibold py-2 px-6 rounded-full hover:bg-red-100 transition">
+       Assistir no YouTube
+    </a>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="bg-red-600 rounded-2xl shadow-lg w-full sm:w-[48%] md:w-[30%] flex flex-col items-center text-center overflow-hidden">
+    <div class="relative w-full pb-[56.25%]">
+      <iframe
+        class="absolute top-0 left-0 w-full h-full rounded-t-2xl pointer-events-none"
+        src="https://www.youtube.com/embed/1A0Y3SPTTg8?controls=0"
+        title="Vídeo 3"
+        allowfullscreen
+      ></iframe>
+    </div>
+    <h2 class="text-white text-lg sm:text-xl font-bold mt-4 px-4">
+      A ÁREA ENFRAQUECIDA DO CAMPO MAGNÉTICO ESTÁ AVANÇANDO
+    </h2>
+    <a href="https://youtu.be/1A0Y3SPTTg8"
+       target="_blank"
+       class="mt-4 mb-4 bg-white text-red-600 font-semibold py-2 px-6 rounded-full hover:bg-red-100 transition">
+       Assistir no YouTube
+    </a>
   </div>
 </section>
 
@@ -547,7 +613,7 @@
 </main>
 
 
-  <!-- ===========================
+<!-- ===========================
      RODAPÉ (FOOTER)
      =========================== -->
 <footer class="bg-[#001F3F] text-white py-10">
@@ -601,9 +667,33 @@
   </div>
 </footer>
 
+<!-- ===========================
+     SCRIPTS
+     =========================== -->
 <script>
   // Atualiza automaticamente o ano no rodapé
   document.getElementById('year').textContent = new Date().getFullYear();
+
+  // Corrige o menu mobile e evita erro de carregamento
+  document.addEventListener("DOMContentLoaded", function() {
+    const btn = document.getElementById('menuMobileBtn');
+    const nav = document.getElementById('menuMobileNav');
+
+    if (btn && nav) {
+      btn.addEventListener('click', () => {
+        const isHidden = nav.classList.toggle('hidden');
+        btn.setAttribute('aria-expanded', !isHidden);
+      });
+
+      window.addEventListener('resize', () => {
+        if (window.innerWidth >= 768) {
+          nav.classList.add('hidden');
+          btn.setAttribute('aria-expanded', 'false');
+        }
+      });
+    }
+  });
 </script>
+
 </body>
-</html>
+    </html>
