Update article cards in index.html
Added a new article card about 'Capotauro' and updated existing card descriptions.

--- a/index.html
+++ b/index.html
@@ -317,7 +317,17 @@
     <h2 class="text-3xl font-bold text-center mb-10 text-[#071834]">Novidades da Ciência e Tecnologia</h2>
     <div class="grid md:grid-cols-3 gap-8">
       
-      <!-- Card 1 -->
+      <!-- Card 1 - Novo artigo Capotauro -->
+      <div class="bg-indigo-900 text-white rounded-lg overflow-hidden shadow-lg flex flex-col">
+        <img src="https://i.postimg.cc/VLfSWHfG/images.jpg" alt="Capotauro - Mistério Cósmico observado pelo James Webb" class="w-full h-48 object-cover">
+        <div class="p-6 flex flex-col flex-grow">
+          <h3 class="text-xl font-bold mb-2">Capotauro: o mistério cósmico revelado pelo telescópio James Webb</h3>
+          <p class="text-sm mb-4 flex-grow">Astrônomos se deparam com um enigmático objeto no espaço profundo, apelidado de “Capotauro”, que intriga a comunidade científica por seu comportamento incomum.</p>
+          <a href="https://portalciencianews.com.br/post/outubro/capotauro-misterio-cosmico-james-webb.html" target="_blank" class="mt-auto bg-white text-indigo-900 font-semibold py-2 px-4 rounded hover:bg-gray-200 text-center">Leia mais</a>
+        </div>
+      </div>
+
+      <!-- Card 2 - Antigo card 1 -->
       <div class="bg-indigo-900 text-white rounded-lg overflow-hidden shadow-lg flex flex-col">
         <img src="https://scx1.b-cdn.net/csz/news/800a/2025/african-print.jpg" alt="Línguas Africanas AI" class="w-full h-48 object-cover">
         <div class="p-6 flex flex-col flex-grow">
@@ -327,7 +337,7 @@
         </div>
       </div>
 
-      <!-- Card 2 -->
+      <!-- Card 3 - Antigo card 2 -->
       <div class="bg-indigo-900 text-white rounded-lg overflow-hidden shadow-lg flex flex-col">
         <img src="https://scx1.b-cdn.net/csz/news/800a/2025/three-new-species-disc.jpg" alt="Novas espécies na Austrália" class="w-full h-48 object-cover">
         <div class="p-6 flex flex-col flex-grow">
@@ -337,20 +347,10 @@
         </div>
       </div>
 
-      <!-- Card 3 -->
-      <div class="bg-indigo-900 text-white rounded-lg overflow-hidden shadow-lg flex flex-col">
-        <img src="https://scx1.b-cdn.net/csz/news/800a/2025/mysterious-gullies-on.jpg" alt="Gretas misteriosas em Marte" class="w-full h-48 object-cover">
-        <div class="p-6 flex flex-col flex-grow">
-          <h3 class="text-xl font-bold mb-2">Gretas Misteriosas em Marte</h3>
-          <p class="text-sm mb-4 flex-grow">Estudo indica que vales em Marte podem ter sido formados por gelo subterrâneo, oferecendo novas pistas sobre água no planeta vermelho.</p>
-          <a href="https://phys.org/news/2025-10-mysterious-gullies-mars-burrowing-ice.html" target="_blank" class="mt-auto bg-white text-indigo-900 font-semibold py-2 px-4 rounded hover:bg-gray-200 text-center">Leia mais</a>
-        </div>
-      </div>
-
     </div>
   </div>
-</section>
-
+  </section>
+  
 <!-- ============================= -->
   <!-- 📰 ARTIGOS EM DESTAQUE -->
   <!-- ============================= -->
