Update card content from video to image and article link

--- a/index.html
+++ b/index.html
@@ -192,29 +192,26 @@
 <section class="my-10 px-4 sm:px-6 md:px-0">
   <div class="max-w-[1000px] mx-auto flex flex-col md:flex-row md:space-x-6 items-start">
 
-    <!-- CARD ANTIGO (horizontal, vídeo à esquerda, título e botão à direita) -->
+    <!-- CARD ATUALIZADO (horizontal, imagem à esquerda, título e botão à direita) -->
     <div class="flex-1 bg-blue-900 rounded-2xl shadow-lg overflow-hidden md:flex w-full mb-6 md:mb-0">
-      <!-- Vídeo -->
+      <!-- Imagem de destaque -->
       <div class="w-full md:w-1/2 h-64 md:h-auto relative">
-        <iframe
-          src="https://www.youtube.com/embed/lxPEhtTA3Mk?controls=0&disablekb=1&modestbranding=1&rel=0"
-          class="absolute top-0 left-0 w-full h-full pointer-events-none"
-          frameborder="0"
-          allowfullscreen
+        <img
+          src="https://i.postimg.cc/fyVKgWLt/23a464501fce4141a8f31ecd3860b29d.jpg"
+          alt="Imagem ilustrativa do cometa 3I/ATLAS cruzando o espaço interestelar"
           loading="lazy"
-          title="Vídeo: Pode ser o menor objeto de matéria escura">
-        </iframe>
+          class="absolute top-0 left-0 w-full h-full object-cover"
+        />
       </div>
 
       <!-- Conteúdo -->
       <div class="w-full md:w-1/2 flex flex-col justify-center text-center md:text-left text-white p-4 md:p-8">
         <h2 class="text-xl sm:text-2xl md:text-3xl font-bold mb-4 leading-tight">
-          Pode ser o menor objeto de matéria escura do universo conhecido
+          Cometa 3I/ATLAS: o visitante interestelar que surpreendeu a ciência
         </h2>
-        <a href="https://www.youtube.com/watch?v=lxPEhtTA3Mk"
-           target="_blank"
+        <a href="https://portalciencianews.com.br/post/outubro/cometa-3i-atlas-visitante-interestelar.html"
            class="bg-yellow-400 text-black font-semibold py-2 px-5 rounded-lg hover:bg-yellow-300 transition duration-300">
-          Veja o vídeo
+          Leia o artigo completo
         </a>
       </div>
     </div>
@@ -240,7 +237,7 @@
     </aside>
 
   </div>
-</section>
+  </section>
 
 <!-- VÍDEOS ATUAIS -->
 
