--- a/index.html
+++ b/index.html
@@ -356,21 +356,29 @@
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
-      <!-- CARD 1: Mini Buracos Negros -->
-      <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
-        <img src="https://cdn.pixabay.com/photo/2021/08/10/05/49/black-hole-6535072_1280.jpg"
-             alt="Ilustração de um análogo de buraco negro em laboratório"
-             class="w-full h-48 object-cover hover:scale-105 transition-transform"
-             loading="lazy">
-        <div class="p-5 text-center flex flex-col justify-between flex-1">
-          <h3 class="text-lg font-semibold text-[#071834] mb-4">Mini Buracos Negros em Laboratório: Ciência Real ou Mito?</h3>
-          <a href="https://portalciencianews.com.br/post/outubro/mini-buracos-negros-laboratorio.html"
-             target="_blank"
-             class="inline-block bg-[#071834] text-white px-5 py-2 rounded-md hover:bg-[#050f27] transition">
-             Leia mais
-          </a>
-        </div>
-      </article>
+      <!-- Card - Buraco Negro -->
+<div class="bg-indigo-900 text-white rounded-lg overflow-hidden shadow-lg flex flex-col">
+  <img 
+    src="https://scx1.b-cdn.net/csz/news/800a/2025/saturday-citations-bla.jpg" 
+    alt="Representação artística de um buraco negro engolindo uma estrela gigante" 
+    class="w-full h-48 object-cover transition-transform duration-500 hover:scale-105"
+    loading="lazy">
+  
+  <div class="p-6 flex flex-col flex-grow">
+    <h3 class="text-xl font-bold mb-2">
+      Buraco negro engole estrela gigante e libera o flare mais poderoso já registrado
+    </h3>
+    <p class="text-sm mb-4 flex-grow">
+      Um evento cósmico sem precedentes surpreende astrônomos ao redor do mundo: um buraco negro devorou uma estrela gigante e emitiu o mais intenso flare já observado na história da astronomia.
+    </p>
+    <a 
+      href="https://portalciencianews.com.br/post/novembro/buraco-negro-engole-estrela-gigante.html" 
+      target="_blank" 
+      class="mt-auto bg-white text-indigo-900 font-semibold py-2 px-4 rounded hover:bg-gray-200 text-center transition-colors duration-300">
+      Leia mais
+    </a>
+  </div>
+</div>
 
       <!-- CARD 2: Energia Escura -->
       <article class="rounded-2xl shadow-md overflow-hidden hover:shadow-lg transition">
