--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <div class="collapse navbar-collapse" id="mainCollapse">
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link text-white" href="#">Início</a></li>
-          <li class="nav-item"><a class="nav-link text-white" href="#">Arquivos</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="https://portalciencianews.com.br/">Início</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="https://portalciencianews.com.br/arquivos.html">Arquivos</a></li>
         </ul>
 
         <!-- SOCIALS (mobile) -->
