Update YouTube video links and titles in index.html

--- a/index.html
+++ b/index.html
@@ -190,15 +190,15 @@
                 <div class="card shadow-lg border-0 text-center bg-danger text-white h-100">
                     <!-- Vídeo -->
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/K_RI7v5qCNQ?controls=0"
+                        <iframe src="https://www.youtube.com/embed/u-BQ-wToWTI?controls=0"
                                 class="rounded-top"
                                 style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body">
                         <h2 class="fs-5 fw-bold">
-                            A MECÂNICA QUÂNTICA ACABA DE SUPERAR A SEGUNDA LEI DA TERMODINÂMICA
+                            A TEORIA DAS CORDAS GANHA FORÇA COM O COMPORTAMENTO DA ENERGIA ESCURA
                         </h2>
-                        <a href="https://youtu.be/K_RI7v5qCNQ"
+                        <a href="https://www.youtube.com/watch?v=u-BQ-wToWTI"
                            target="_blank"
                            class="btn btn-light text-danger fw-semibold mt-3 rounded-pill px-4">
                             Assistir no YouTube
@@ -211,15 +211,15 @@
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card shadow-lg border-0 text-center bg-danger text-white h-100">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/XfCOgFORy_I?controls=0"
+                        <iframe src="https://www.youtube.com/embed/CJIUH2xWFxY?controls=0"
                                 class="rounded-top"
                                 style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body">
                         <h2 class="fs-5 fw-bold">
-                            PELA PRIMEIRA VEZ, ENCONTRADOS RESTOS DO PLANETA QUE DEU ORIGEM À TERRA
+                            OS ÁTOMOS FORAM TORCIDOS PELA LUZ EM REGISTRO INÉDITO!
                         </h2>
-                        <a href="https://youtu.be/XfCOgFORy_I"
+                        <a href="https://www.youtube.com/watch?v=CJIUH2xWFxY"
                            target="_blank"
                            class="btn btn-light text-danger fw-semibold mt-3 rounded-pill px-4">
                             Assistir no YouTube
@@ -232,15 +232,15 @@
             <div class="col-12 col-sm-6 col-md-4">
                 <div class="card shadow-lg border-0 text-center bg-danger text-white h-100">
                     <div class="ratio ratio-16x9">
-                        <iframe src="https://www.youtube.com/embed/1A0Y3SPTTg8?controls=0"
+                        <iframe src="https://www.youtube.com/embed/DIvvIU0xEHc?controls=0"
                                 class="rounded-top"
                                 style="pointer-events: none;" tabindex="-1"></iframe>
                     </div>
                     <div class="card-body">
                         <h2 class="fs-5 fw-bold">
-                            A ÁREA ENFRAQUECIDA DO CAMPO MAGNÉTICO ESTÁ AVANÇANDO
+                            ENCONTRADOS SINAIS DE ALGO DESCONHECIDO ABAIXO DA PIRÂMIDE DE MIQUERINOS!
                         </h2>
-                        <a href="https://youtu.be/1A0Y3SPTTg8"
+                        <a href="https://youtu.be/DIvvIU0xEHc"
                            target="_blank"
                            class="btn btn-light text-danger fw-semibold mt-3 rounded-pill px-4">
                             Assistir no YouTube
@@ -252,6 +252,7 @@
         </div>
     </div>
 </section>
+
 
 <!-- ============================= -->
 <!-- NOVOS ARTIGOS -->
